# flash-hob

./: README.md  pyproject.toml
experiments/: hello_cute.py
fhob/: benchhhh.py  main.py  test_bwd_bwd_impls.py  test_bwdbwd.py  triton_bwdbwd.py  triton_flash.py
fhob/jax_refs/: compare.py  jax_impl.py  torch_impl.py
fhog/: __init__.py  benchhhh.py  test_bwdbwd.py  triton_bwdbwd.py  triton_flash.py
fhog/jax_refs/: compare.py  flash_impl_herman.py  jax_impl.py  torch_impl.py
jax_refs/: flash_impl.py
